# VulkanTest

./: .gitignore  CMakeLists.txt  VulkanTest2.sln
Libraries/: CMakeLists.txt
Libraries/Application/: Application.cpp  Application.hpp  ApplicationConfig.cpp  ApplicationConfig.hpp  BuildConfig.data  CMakeFiles.cmake  CMakeLists.txt  EngineSerialization.cpp  EngineSerialization.hpp  Main.cpp
Libraries/Engine/: ArchetypeManager.cpp  ArchetypeManager.hpp  CMakeFiles.cmake  CMakeLists.txt  Component.cpp  Component.hpp  Composition.cpp  Composition.hpp  CompositionInitializer.cpp  CompositionInitializer.hpp  Engine.cpp  Engine.hpp  EngineZilchStaticLibrary.cpp  EngineZilchStaticLibrary.hpp  GameSession.cpp  GameSession.hpp  IApplication.cpp  IApplication.hpp  Keyboard.cpp  Keyboard.hpp  LevelManager.cpp  LevelManager.hpp  Mouse.cpp  Mouse.hpp  Precompiled.hpp  Space.cpp  Space.hpp  TimeSpace.cpp  TimeSpace.hpp  Transform.cpp  Transform.hpp  UpdateEvent.cpp  UpdateEvent.hpp
Libraries/Graphics/: CMakeFiles.cmake  CMakeLists.txt  Camera.cpp  Camera.hpp  Graphical.cpp  Graphical.hpp  GraphicalEntry.cpp  GraphicalEntry.hpp  GraphicsBufferTypes.cpp  GraphicsBufferTypes.hpp  GraphicsEngine.cpp  GraphicsEngine.hpp  GraphicsSpace.cpp  GraphicsSpace.hpp  GraphicsStandard.hpp  GraphicsZilchStaticLibrary.cpp  GraphicsZilchStaticLibrary.hpp  Material.cpp  Material.hpp  MaterialBinding.cpp  MaterialBinding.hpp  MaterialShared.cpp  MaterialShared.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  NativeRenderer.cpp  NativeRenderer.hpp  Precompiled.hpp  RenderGroup.cpp  RenderGroup.hpp  RenderPipelineEnums.hpp  RenderPipelineSettings.cpp  RenderPipelineSettings.hpp  RenderQueue.cpp  RenderQueue.hpp  RenderTarget.cpp  RenderTarget.hpp  RenderTasks.cpp  (+17 more)
Libraries/Math/: CMakeFiles.cmake  CMakeLists.txt  Integer2.hpp  Math.hpp  Matrix3.hpp  Matrix4.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
Libraries/Resources/: CMakeFiles.cmake  CMakeLists.txt  Resource.cpp  Resource.hpp  ResourceEvents.cpp  ResourceEvents.hpp  ResourceExtensionManager.hpp  ResourceExtensions.cpp  ResourceExtensions.hpp  ResourceId.cpp  ResourceId.hpp  ResourceLibrary.cpp  ResourceLibrary.hpp  ResourceLibraryGraph.cpp  ResourceLibraryGraph.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceMetaFile.hpp  ResourceSet.cpp  ResourceSet.hpp  ResourceSystem.cpp  ResourceSystem.hpp  ResourceZilchStaticLibrary.cpp  ResourceZilchStaticLibrary.hpp  ResourcesStandard.hpp
Libraries/Serialization/: CMakeFiles.cmake  CMakeLists.txt  EngineSerialization.cpp  EngineSerialization.hpp
Libraries/Utilities/: Asserts.hpp  CMakeFiles.cmake  CMakeLists.txt  Cookie.cpp  Cookie.hpp  Enums.hpp  File.hpp  Hasher.cpp  Hasher.hpp  JsonSerializers.cpp  JsonSerializers.hpp
Libraries/Vulkan/: CMakeFiles.cmake  CMakeLists.txt  EnumConversions.cpp  EnumConversions.hpp  RenderGraph.cpp  RenderGraph.hpp  SimpleRendererComponent.cpp  SimpleRendererComponent.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanBufferCreation.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanDeviceQueries.hpp  VulkanFrameBuffer.cpp  VulkanFrameBuffer.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanImageCache.cpp  VulkanImageCache.hpp  VulkanImageView.cpp  VulkanImageView.hpp  VulkanImages.hpp  VulkanInitialization.hpp  VulkanLogicalDeviceCreation.hpp  VulkanMaterialPipelineCache.cpp  VulkanMaterialPipelineCache.hpp  VulkanMaterials.cpp  VulkanMaterials.hpp  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.hpp  VulkanPhysicsDeviceSelection.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanRenderPassCache.cpp  VulkanRenderPassCache.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  (+19 more)
Libraries/ZilchHelpers/: CMakeFiles.cmake  CMakeLists.txt  ZilchCallingStateSingleton.hpp  ZilchModule.cpp  ZilchModule.hpp
Libraries/ZilchScript/: CMakeFiles.cmake  CMakeLists.txt  Precompiled.hpp  ZilchComponent.cpp  ZilchComponent.hpp  ZilchScriptExtensions.cpp  ZilchScriptExtensions.hpp  ZilchScriptLibrary.cpp  ZilchScriptLibrary.hpp  ZilchScriptManager.cpp  ZilchScriptManager.hpp  ZilchScriptStandard.hpp  ZilchScriptZilchStaticLibrary.cpp  ZilchScriptZilchStaticLibrary.hpp
Resources/BasicProject/: Level.level
Resources/BasicProject/Archetypes/: Cube.archetype  Engine.archetype  Game.archetype  Space.archetype
Resources/BasicProject/Models/: Quad.mesh
Resources/BasicProject/ZilchFragments/: ImageColor.zilchFrag  Pixel.zilchFrag  UvScroll.zilchFrag  Vertex.zilchFrag
Resources/BasicProject/ZilchMaterials/: Circle.zilchMaterial  (+3 more)
Resources/ZilchFragments/: AlbedoColor.zilchFrag  NormalColor.zilchFrag
Resources/data/: Chalet.texture  Cube.mesh  Level.level  Quad.mesh  Test.material  Test.shader  Test.texture  Test.zilchShader  ZeroAlbedo.texture  ZilchTest.zilchMaterial
Resources/shaders/: Pixel2.frag  compile.bat  pixel.spv  pixel2.spv
Utilities/SPIRV-Cross/: .gitignore
VulkanTest2/: File.hpp  JsonSerializers.cpp  Material.hpp  Math.hpp  Mesh.cpp  Mesh.hpp  Vertex.hpp  VulkanBufferCreation.hpp  VulkanCommandBuffer.hpp  VulkanDeviceQueries.hpp  VulkanExtensions.hpp  VulkanImages.hpp  VulkanInitialization.hpp  VulkanLogicalDeviceCreation.hpp  VulkanPhysicsDeviceSelection.hpp  VulkanPipeline.hpp  VulkanRenderPass.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanRendererInit.hpp  VulkanStatus.hpp  VulkanStructures.cpp  VulkanStructures.hpp  VulkanSwapChain.hpp  VulkanSyncronization.hpp  VulkanTest2.cpp  VulkanTest2.vcxproj  VulkanTest2.vcxproj.filters  VulkanValidationLayers.hpp
VulkanTest2/Helpers/: File.hpp  GraphicsEngine.cpp  GraphicsEngine.hpp  GraphicsSpace.cpp  GraphicsSpace.hpp  Material.cpp  Material.hpp  MaterialBinding.cpp  MaterialBinding.hpp  Math.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  ShaderEnumTypes.cpp  Texture.cpp  Texture.hpp  Vertex.hpp
VulkanTest2/Internal/: EnumConversions.hpp  VulkanMaterials.cpp  VulkanMaterials.hpp
VulkanTest2/data/: Chalet.mesh  Level.level  Test.mesh  Test2.shader
VulkanTest2/shaders/: Pixel.frag  Vertex.vert  Vertex2.vert  compile.bat  pixel.spv  vertex.spv  vertex2.spv
(+4 files in other folders)
